<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_map" translatable="false">Map Location</string>
    <string name="action_share" translatable="false">Share</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>
    <string name="hello_world">Hello world!</string>

    <!-- Temperature unit selection preference list related -->
    <string name="pref_temperature_key" translatable="false">tempUnit</string>
    <string name="pref_temperature_label" translatable="false">temperature unit</string>
    <string name="pref_temperature_default" translatable="false">Metric</string>
    <string name="pref_temperature_dialogue_title" translatable="false">Temperature Unit</string>

    <string-array name="pref_tempTypes_entries" translatable="false">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_syncConnectionTypes_values" translatable="false">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

</resources>
